Add "endless" demo page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-Welcome to Webcoder31 GitHub pages
+<h1>Welcome to Webcoder31 GitHub pages</h1>
+<a href="./endless/index.html">Endless - A stunning slideshow!</a>
