Fix image URL for sharing Endless on Facebook

--- a/endless/index.html
+++ b/endless/index.html
@@ -16,7 +16,7 @@
     <!-- Facebook meta data (Open Graph) -->
     <meta property="og:title" content="ENDLESS / jQuery Plugin">
     <meta property="og:description" content="A stunning slideshow with infinite zoom and parallax effect">
-    <meta property="og:image" content="http://www.i-creativ.com/endless/assets/share.jpg">
+    <meta property="og:image" content="https://webcoder31.github.io/endless/assets/share.jpg">
 
 
     <!-- jQuery library -->
