--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1>Welcome to Webcoder31 GitHub pages</h1>
 <a href="./endless/index.html">Endless - A stunning slideshow!</a>
+<a href="./test/index.html">Fade - Fade image</a>
